# mcp-cache

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/superpowers/plans/: 2026-07-05-list-cache-keys.md
docs/superpowers/specs/: 2026-07-05-list-cache-keys-design.md
src/mcp_cache/: __init__.py  cache.py  server.py
tests/: test_cache.py
