[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cache"
version = "0.1.0"
description = "Reusable SQLite-backed cache for MCP servers — TTL and incremental time series strategies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "cache", "sqlite", "time-series", "llm"]

[project.urls]
Homepage = "https://github.com/cmaurer/mcp-cache"
Issues = "https://github.com/cmaurer/mcp-cache/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cache"]

[tool.hatch.build]
sources = ["src"]