[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cache"
version = "0.1.1"
description = "Reusable SQLite-backed cache for MCP servers — TTL and incremental time series strategies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "cache", "sqlite", "time-series", "llm"]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/cmaurer/mcp-cache"
Issues = "https://github.com/cmaurer/mcp-cache/issues"

[project.scripts]
mcp-cache = "mcp_cache.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]



[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cache"]

[tool.hatch.build]
sources = ["src"]